// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `null`;

exports[`renders correctly with a business 1`] = `
<div
  className="Login"
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
      "marginLeft": "100px",
      "marginRight": "100px",
      "paddingTop": "50px",
    }
  }
>
  <form
    className=""
  >
    <h2>
      Test Business
    </h2>
    <div
      className="form-group col"
    >
      <form
        className=""
      >
        <div
          className="form-row"
        >
          <div
            className="form-group col"
          >
            <label
              className="form-label"
              htmlFor="formGridFirstName"
            >
              First Name
            </label>
            <input
              className="form-control"
              disabled={true}
              id="formGridFirstName"
              onChange={[Function]}
              placeholder=""
              type="name"
            />
          </div>
          <div
            className="form-group col"
          >
            <label
              className="form-label"
              htmlFor="formGridLastName"
            >
              Last Name
            </label>
            <input
              className="form-control"
              disabled={true}
              id="formGridLastName"
              onChange={[Function]}
              placeholder=""
              type="name"
            />
          </div>
        </div>
        <div
          className="form-row"
        >
          <div
            className="form-group col"
          >
            <label
              className="form-label"
              htmlFor="formGridEmail"
            >
              Email Address
            </label>
            <input
              className="form-control"
              disabled={true}
              id="formGridEmail"
              onChange={[Function]}
              placeholder=""
              type="email"
            />
          </div>
        </div>
      </form>
    </div>
    <div
      className="form-group col"
    >
      <form
        className=""
      >
        <div
          className="form-row"
        >
          <div
            className="form-group col"
          >
            <h2>
              Add a Beer
            </h2>
            <hr />
            <div
              className="form-row"
            >
              <div
                className="form-group col"
              >
                <label
                  className="form-label"
                  htmlFor="formGridBeerName"
                >
                  Name of Beer
                </label>
                <input
                  className="form-control"
                  disabled={false}
                  id="formGridBeerName"
                  onChange={[Function]}
                  placeholder="Corona"
                  type="name"
                />
              </div>
            </div>
            <form
              className=""
            >
              <label
                className="form-label"
                htmlFor="formGridFirstName"
              >
                Style
              </label>
            </form>
            <div
              className=" css-2b097c-container"
              onKeyDown={[Function]}
            >
              <div
                className=" css-yk16xz-control"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className=" css-1hwfws3"
                >
                  <div
                    className=" css-1uccc91-singleValue"
                  >
                    
                  </div>
                  <div
                    className="css-b8ldur-Input"
                  >
                    <div
                      className=""
                      style={
                        Object {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-autocomplete="list"
                        autoCapitalize="none"
                        autoComplete="off"
                        autoCorrect="off"
                        disabled={false}
                        id="react-select-2-input"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        spellCheck="false"
                        style={
                          Object {
                            "background": 0,
                            "border": 0,
                            "boxSizing": "content-box",
                            "color": "inherit",
                            "fontSize": "inherit",
                            "label": "input",
                            "opacity": 1,
                            "outline": 0,
                            "padding": 0,
                            "width": "1px",
                          }
                        }
                        tabIndex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style={
                          Object {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className=" css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    className=" css-1okebmr-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    className=" css-tlfecz-indicatorContainer"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className="css-6q0nyr-Svg"
                      focusable="false"
                      height={20}
                      viewBox="0 0 20 20"
                      width={20}
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <hr />
            <div
              className="form-row"
            >
              <button
                className="btn btn-primary"
                disabled={true}
                onClick={[Function]}
                type="submit"
              >
                Add Beer
              </button>
            </div>
          </div>
          <div />
          <div
            className="form-group col"
          >
            <h2>
              Remove a Beer
            </h2>
            <hr />
            <label
              className="form-label"
              htmlFor="formGridLastName"
            >
              Name of Beer
            </label>
            <div
              className=" css-2b097c-container"
              onKeyDown={[Function]}
            >
              <div
                className=" css-yk16xz-control"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className=" css-1hwfws3"
                >
                  <div
                    className=" css-1wa3eu0-placeholder"
                  >
                    Select...
                  </div>
                  <div
                    className="css-b8ldur-Input"
                  >
                    <div
                      className=""
                      style={
                        Object {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-autocomplete="list"
                        autoCapitalize="none"
                        autoComplete="off"
                        autoCorrect="off"
                        disabled={false}
                        id="react-select-3-input"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        spellCheck="false"
                        style={
                          Object {
                            "background": 0,
                            "border": 0,
                            "boxSizing": "content-box",
                            "color": "inherit",
                            "fontSize": "inherit",
                            "label": "input",
                            "opacity": 1,
                            "outline": 0,
                            "padding": 0,
                            "width": "1px",
                          }
                        }
                        tabIndex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style={
                          Object {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className=" css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    className=" css-1okebmr-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    className=" css-tlfecz-indicatorContainer"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className="css-6q0nyr-Svg"
                      focusable="false"
                      height={20}
                      viewBox="0 0 20 20"
                      width={20}
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <hr />
            <button
              className="btn btn-danger"
              disabled={false}
              onClick={[Function]}
              type="submit"
            >
              Remove Beer
            </button>
          </div>
        </div>
      </form>
    </div>
    <form
      className=""
    >
      <button
        className="btn btn-danger"
        disabled={false}
        onClick={[Function]}
        type="submit"
      >
        Logout
      </button>
    </form>
  </form>
</div>
`;

exports[`renders correctly with a user logged in 1`] = `
<div
  className="Login"
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
      "marginLeft": "100px",
      "marginRight": "100px",
      "paddingTop": "50px",
    }
  }
>
  <form
    className=""
  >
    <div
      className="form-group col"
    >
      <form
        className=""
      >
        <div
          className="form-row"
        >
          <div
            className="form-group col"
          >
            <label
              className="form-label"
              htmlFor="formGridFirstName"
            >
              First Name
            </label>
            <input
              className="form-control"
              disabled={true}
              id="formGridFirstName"
              onChange={[Function]}
              placeholder=""
              type="name"
            />
          </div>
          <div
            className="form-group col"
          >
            <label
              className="form-label"
              htmlFor="formGridLastName"
            >
              Last Name
            </label>
            <input
              className="form-control"
              disabled={true}
              id="formGridLastName"
              onChange={[Function]}
              placeholder=""
              type="name"
            />
          </div>
        </div>
        <div
          className="form-row"
        >
          <div
            className="form-group col"
          >
            <label
              className="form-label"
              htmlFor="formGridEmail"
            >
              Email Address
            </label>
            <input
              className="form-control"
              disabled={true}
              id="formGridEmail"
              onChange={[Function]}
              placeholder=""
              type="email"
            />
          </div>
        </div>
      </form>
    </div>
    <form
      className=""
    >
      <button
        className="btn btn-danger"
        disabled={false}
        onClick={[Function]}
        type="submit"
      >
        Logout
      </button>
    </form>
  </form>
</div>
`;
